<resources>
    <string name="app_name">My HotelRec 1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Username</string>
    <string name="nav_header_subtitle">myUsername.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_writeReview">Write Review</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_reviewlist">Review List</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_trash">Trash</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_rateUs">Rate Us</string>
    <string name="menu_communicate">Communicate</string>
    <string name="logout_fragment">Logout Fragment</string>
    <string name="login_fragment">Login Fragment</string>
</resources>