<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reviewlist"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_reviewlist" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/baseline_delete_24"
            android:title="@string/menu_trash" />
        <item
            android:id="@+id/nav_sync"
            android:icon="@drawable/baseline_cloud_sync_24"
            android:title="@string/menu_sync" />

        <!-- PROFILE Part-->

        <item android:title="@string/menu_profile">

            <menu>
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/baseline_login_24"
                    android:title="@string/menu_login" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/baseline_logout_24"
                    android:title="@string/menu_logout" />
            </menu>

        </item>

        <!-- COMMUNICATION Part-->

        <item android:title="@string/menu_communicate">

            <menu>
                <item
                    android:id="@+id/nav_rate"
                    android:icon="@drawable/baseline_grade_24"
                    android:title="@string/menu_rateUs" />
            </menu>

        </item>
    </group>
</menu>